--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <groupId>com.tinkerpop</groupId>
     <artifactId>frames</artifactId>
-    <version>2.6.0-SNAPSHOT</version>
+    <version>2.6.0-jsight-SNAPSHOT</version>
     <packaging>jar</packaging>
     <url>http://frames.tinkerpop.com</url>
     <name>Frames: An Object to Graph Framework</name>
